--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /******************************************************************
-Theme Name: Bones (Rename Me!)
-Theme URI: http://www.themble.com/bones
-Description: This site was built using the Bones Development Theme. For more information about Bones or to view documentation, you can visit the <a href="https://github.com/eddiemachado/bones/issues" title="Bones Issues">Bones Issues</a> page on Github. You'll want to customize this for your clients with your own information.
-Author: Your Name Here
-Author URI: http://www.yoururlhere.com
-Version: 1.7
-Tags: fluid-layout, responsive-layout, accessibility-ready, translation-ready, microformats, rtl-language-support
+Theme Name: VCUarts Email Gen 2015
+Theme URI: https://github.com/VCUarts/email-gen
+Description: Built by the wonderful VCUarts Communications Office
+Author: VCUarts
+Author URI: http://arts.vcu.edu
+Version: 1.0
+Tags: email
 
 License: WTFPL
 License URI: http://sam.zoy.org/wtfpl/
