--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@ Theme URI: https://github.com/VCUarts/email-gen
 Description: Built by the wonderful VCUarts Communications Office
 Author: VCUarts
 Author URI: http://arts.vcu.edu
-Version: 1.1.04
+Version: 1.1.05
 Tags: fluid-layout, responsive-layout, accessibility-ready
 
 GitHub Theme URI: https://github.com/VCUarts/wp-email-gen-2k15
+GitHub Branch: master
 
 License: WTFPL
 License URI: http://sam.zoy.org/wtfpl/
